# ieskf_slam

./: .gitignore  README.md
src/ieskf_slam/: CMakeLists.txt  package.xml
src/ieskf_slam/config/: avia.yaml  generic.yaml  velodyne.yaml
src/ieskf_slam/include/ieskf_slam/: globaldefine.h
src/ieskf_slam/include/ieskf_slam/common/: colorfful_terminal.hpp  logging.h
src/ieskf_slam/include/ieskf_slam/common/scan_context/: Scancontext.cpp  Scancontext.h
src/ieskf_slam/include/ieskf_slam/math/: SO3.h  SO3.hpp  geometry.h  math.h  math.hpp
src/ieskf_slam/include/ieskf_slam/modules/: module_base.h
src/ieskf_slam/include/ieskf_slam/modules/backend/: backend_coordinator.h  backend_types.h  backend_utils.h  ceres_pose_graph_optimizer.h  icp_loop_registrar.h  keyframe_store.h  loop_detector_base.h  loop_registrar_base.h  pose_graph_optimizer_base.h  scan_context_loop_detector.h  simple_pose_graph_optimizer.h
src/ieskf_slam/include/ieskf_slam/modules/frontbackPropagate/: frontback_propagate.h
src/ieskf_slam/include/ieskf_slam/modules/frontend/: frontend.h  lio_zh_model.h
src/ieskf_slam/include/ieskf_slam/modules/ieskf/: ieskf.h
src/ieskf_slam/include/ieskf_slam/modules/map/: ikdtree_map_manager.h  map_manager_base.h  rect_map_manager.h
src/ieskf_slam/include/ieskf_slam/type/: base_type.h  imu.h  measure_group.h  point.h  pointcloud.h  pose.h  timestamp.h
src/ieskf_slam/include/wrapper/ros_noetic/: ieskf_backend_noetic_wrapper.h  ieskf_frontend_noetic_wrapper.h
src/ieskf_slam/include/wrapper/ros_noetic/lidar_process/: avia_process.h  common_lidar_process_interface.h  generic_pointcloud2_process.h  velodyne_process.h
src/ieskf_slam/launch/: avia.launch  generic.launch  velodyne.launch
src/ieskf_slam/rviz/: show.rviz
src/ieskf_slam/src/app/: ieskf_backend_node.cpp  ieskf_noetic_running_node.cpp  ieskf_slam_node.cpp
src/ieskf_slam/src/ieskf_slam/: frontend.cpp
src/ieskf_slam/src/ieskf_slam/modules/backend/: backend_coordinator.cpp  ceres_pose_graph_optimizer.cpp  icp_loop_registrar.cpp  keyframe_store.cpp  scan_context_loop_detector.cpp  simple_pose_graph_optimizer.cpp
src/ieskf_slam/src/ieskf_slam/modules/frontbackPropagate/: frontback_propagate.cpp
src/ieskf_slam/src/ieskf_slam/modules/frontend/: frontend.cpp
src/ieskf_slam/src/ieskf_slam/modules/ieskf/: ieskf.cpp
src/ieskf_slam/src/ieskf_slam/modules/map/: ikdtree_map_manager.cpp  map_manager_factory.cpp  rect_map_manager.cpp
src/ieskf_slam/src/wrapper/ros_noetic/: ieskf_backend_noetic_wrapper.cpp  ieskf_frontend_noetic_wrapper.cpp
